--- a/dev/materialize.config.scss
+++ b/dev/materialize.config.scss
@@ -26,13 +26,13 @@
 // css only, no JS needed for these
 // activate only what you need
 $roboto-font-path: "~materialize-css/fonts/roboto/";
-@import "~materialize-css/sass/components/roboto";
-@import "~materialize-css/sass/components/icons-material-design"; // icons are no long included in materializeCSS
+//@import "~materialize-css/sass/components/roboto";
+//@import "~materialize-css/sass/components/icons-material-design"; // icons are no long included in materializeCSS
 @import "~materialize-css/sass/components/buttons";
 @import "~materialize-css/sass/components/grid";
-@import "~materialize-css/sass/components/navbar";
-@import "~materialize-css/sass/components/preloader";
-@import "~ceri-materialize/forms";
+//@import "~materialize-css/sass/components/navbar";
+//@import "~materialize-css/sass/components/preloader";
+//@import "~ceri-materialize/forms";
 
 // css for js modules
 // activate only what you need
