add styl to npm

--- a/dev/materialize.config.styl
+++ b/dev/materialize.config.styl
@@ -3,3 +3,16 @@
 @require "~ceri-materialize/3_utils"
 @require "~ceri-materialize/3_typography"
 @require "~ceri-materialize/6_buttons"
+
+ceri-dropdown
+  background: white
+  border: 1px solid black
+  width: 80px
+  margin: 0
+  padding: 0
+  list-style-type: none
+  z-index:1
+
+button.absolute
+  position: absolute
+  background-color: #80E0FF
